<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterActivity">


    <View
        android:id="@+id/circleOne"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/circle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circleTwo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/circle_2"
        app:layout_constraintStart_toEndOf="@id/circleOne"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/emerald"
        android:fontFamily="@font/satisfy"
        android:layout_marginTop="-150dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/circleTwo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="24sp"
        android:layout_marginHorizontal="24sp"
        app:layout_constraintTop_toBottomOf="@+id/branding"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/name"
        android:textColor="@color/emerald"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <com.fshou.ceritain.ui.EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:hint="@string/your_name"
        android:layout_marginHorizontal="24dp"
        android:maxLines="1"
        android:inputType="text"
         />

    <TextView

        android:layout_marginTop="8dp"
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/emerald"
        android:layout_marginHorizontal="24dp"
        />


    <com.fshou.ceritain.ui.EditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:hint="@string/your_email_addres"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/emerald"
        android:layout_marginHorizontal="24dp"
        />


    <com.fshou.ceritain.ui.EditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:hint="@string/your_password"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="emailAddress"
        android:inputType="textPassword" />


    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/emerald"
        android:layout_marginHorizontal="24dp"
        />


    <com.fshou.ceritain.ui.EditText
        android:id="@+id/inputRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvRepeatPassword"
        android:hint="@string/repeat_password"
        android:layout_marginHorizontal="24dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <com.fshou.ceritain.ui.PrimaryButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRepeatPassword" />



    <TextView
        android:id="@+id/tvOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        />



    <com.fshou.ceritain.ui.SecondaryButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/login"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <ImageView
        android:id="@+id/checkAnim"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:srcCompat="@drawable/check_animated"
        android:contentDescription="@string/success_animation" />

    <TextView
        android:id="@+id/registerSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/registered_succesfully"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAnim" />



</androidx.constraintlayout.widget.ConstraintLayout>