<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img"
        android:scaleType="centerCrop"
     />

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/image_overlay"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="-40dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/tell_your_story_to_the_world"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="24dp"
        android:text="@string/lorem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        style="@style/Theme.Ceritain.Button.Primary"
        app:cornerRadius="6dp"
        android:id="@+id/btnLogin"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnRegister"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/emerald"
        app:cornerRadius="6dp"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:layout_marginHorizontal="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />



    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/continue_without_an_account"
        android:textColor="@color/emerald"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />


    <TextView
        android:id="@+id/branding"
        android:fontFamily="@font/satisfy"
        android:textColor="@color/emerald"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>