<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/circleOne"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/circle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/circleTwo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/circle_2"
        app:layout_constraintStart_toEndOf="@id/circleOne"
        app:layout_constraintTop_toTopOf="parent"
/>

   <TextView
       android:id="@+id/branding"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/app_name"
       android:textColor="@color/emerald"
       android:fontFamily="@font/satisfy"
       android:layout_marginTop="-70dp"
       android:layout_marginHorizontal="24dp"
       android:textSize="24sp"
       app:layout_constraintTop_toBottomOf="@+id/circleTwo"
       app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_your_account"
        android:textColor="@color/black"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="24sp"
        android:layout_marginHorizontal="24sp"
        app:layout_constraintTop_toBottomOf="@+id/branding"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_marginTop="48dp"
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/emerald"
        android:layout_marginHorizontal="24dp"
        />


    <com.fshou.ceritain.ui.EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:hint="@string/email"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/emerald"
        android:layout_marginHorizontal="24dp"
        />


    <com.fshou.ceritain.ui.EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        android:hint="@string/password"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <view class="com.fshou.ceritain.ui.Button$Primary"
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <view class="com.fshou.ceritain.ui.Button$Ghost"
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/continue_without_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnContinue"
        android:layout_marginHorizontal="24dp"
        app:errorEnabled="true"
        >

        <com.fshou.ceritain.ui.EditText
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="48dp" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"
        />



    <view class="com.fshou.ceritain.ui.Button$Secondary"
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/register"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>