<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.capture.CaptureActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.App.Toolbar.Sans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/close"
        app:title="@string/capture"
        app:titleCentered="true"
        app:titleTextColor="@color/emerald" />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/preview_image"
        app:layout_constraintBottom_toTopOf="@id/cameraAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/preview_image"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/cameraAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintVertical_bias="0.0"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="0dp"
        >
        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/preview_image"
            app:layout_constraintBottom_toTopOf="@id/cameraAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />


    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cameraAction"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPreview"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/capture"
            android:contentDescription="@string/capture_button" />

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gallery"
            android:contentDescription="@string/pick_from_gallery" />

        <ImageView
            android:id="@+id/switchCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/switch_camera"
            android:contentDescription="@string/switch_camera" />

        <ImageView
            android:id="@+id/clearImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_black"
            android:visibility="gone"
            android:contentDescription="@string/clear_image" />

        <ImageView
            android:id="@+id/chooseImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/check_check"
            android:visibility="gone"
            android:contentDescription="@string/choose_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>