<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="14dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="8dp"
    android:backgroundTint="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    >
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/profile_picture"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/plus_jakarta_sans_semi_bold"
            android:text="@string/username"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@id/profilePicture"
            card_view:layout_constraintTop_toTopOf="@id/profilePicture" />

        <TextView
            android:id="@+id/postedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="Posted at"
            android:textColor="#9F9F9F"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/profilePicture"
            card_view:layout_constraintStart_toStartOf="@+id/userName"
            card_view:layout_constraintTop_toBottomOf="@+id/userName" />

        <Button
            android:id="@+id/btnShare"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/emerald"
            android:iconTint="@color/white"
            card_view:icon="@drawable/share"
            card_view:layout_constraintBottom_toBottomOf="@+id/profilePicture"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/profilePicture" />

        <ImageView
            android:id="@+id/storyPicture"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/profilePicture"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/description"
            android:fontFamily="@font/plus_jakarta_sans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="3"
            android:text="@string/lorem"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/storyPicture" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>